# fenicsx-ldrb

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  _config.yml  _toc.yml  demo.py  pyproject.toml
.github/workflows/: build_docs.yml  docker-image.yml  main.yml  mpi.yml  pre-commit.yml  pypi.yml
docs/: api.rst
src/ldrb/: __init__.py  aha.py  calculus.py  cli.py  io.py  ldrb.py  utils.py
tests/: conftest.py  test_aha.py  test_calculus.py  test_cli.py  test_io.py  test_ldrb.py
